while my data set is still lacking, it has already revealed some insights that are changing my advice

--- a/src/content/docs/generals/siege.mdx
+++ b/src/content/docs/generals/siege.mdx
@@ -21,7 +21,8 @@ and [BoA][] on.  This is because siege troops require gems to heal.
 
 ### For Free to Play Players:
 
-There are only two generals easily [ascended][] by a F2P player for siege troops:
+There are only two traditionally recommended generals that are also easily 
+[ascended][] by a F2P player for siege troops:
 * Matthias I (604)
 * Ulysses S. Grant [D] (602)
 
@@ -31,9 +32,15 @@ easy to win, so even a free player might get enough copies of him to give him
 at least one or two red stars.  I am unsure how a Napoleon with one red star
 compares to a Matthias with three or more red stars.
 
-For your assistant general, assemble Suleiman the Magnificent from fragments
-from relics.  He makes one of the best assistant generals for siege troops even
-if you do have a premium general, and he pairs with all of these options. 
+However, my analysis indicates that **Suleiman the Magnificent** is consistently 
+undervalued and underrated.  Ascended to three red stars, pairs with him as lead
+have similar attack buffs as the current leading premium generals once you realize
+that his [debuffs] will make the attack he does have more effective.  
+
+He is thus my recommendation.  You should then pick one of the many premium generals
+that Suleiman pairs with as your assistant.  
+
+[debuffs]: <../../reference/glossary/#debuff>
 
 [ascended]: <../../reference/glossary/#ascend>
 
@@ -44,15 +51,18 @@ primary generals are premium generals.  Additionally, because the siege general
 *is* the last general you should be working on anyway, you have more time to
 slowly, over the course of (literally) years, assemble the fragments you
 need to [ascend][] this general.  My advice is to hang onto every copy of all
-four of the following generals that you come across:
+of the following generals that you come across:
 
-* Zucca (738)
-* John Churchill (712)
-* Edward Teach [D S] (700)
-* Petronas (702) 
+* Pallas
+* Raimondo
+* Kleos
+* Zucca 
+* John Churchill 
+* Edward Teach [D S] 
+* Petronas 
 
 However, only actually add skill books to whichever one you happen to get
-first, and only ever use this general in [BoC][] or [BoG][].
+first, and only ever use this general in [BoC][] or [BoG][].  
 
 You have lots of options for pairings depending on which general ends up being
 your main general. This is because for Edward Teach and Suleiman dominate the
@@ -78,12 +88,12 @@ developing.  In fact, you might even wait until you have *Suleiman's* (or
 Teach's) specialties maxed out to four gold as well before deciding (although
 remember not to ascend your assistant).
 
-Lastly, if you come across Septimus Severus, be aware that he is a superior
-choice as primary general if you are looking to use your siege to reinforce
-others in your alliance.  Not every light spender will have the ability to
-invest in using siege this way, but if you can, having a strong general to lead
-them will be key.  Pair Septimus with either Teach or Suleiman, whichever you
-picked as assistant for your attacking pair.
+Lastly, keep in mind that siege is often the best troop class to use for 
+reinforcing someone's keep.  However, due to the way that [buff] activation
+conditions work, many of these premium generals face significant disadvantages
+when used this way.  Raimondo, Teach, and Suleiman will retain their value, and 
+Septimius Severus, who when evaluated as an attack general falls just below top 
+tier, starts to look much more attractive. 
 
 [mounted]: <../mounted/>
 
@@ -99,3 +109,4 @@ picked as assistant for your attacking pair.
 
 [BoG]: <../../reference/glossary/#BoG>
 
+[buff]: <../../reference/glossary/#buff>
