working towards calculating march size, some of these are guessed values

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -5,6 +5,6 @@ sidebar:
   hidden: true
 tableOfContents: false
 ---
-import GeneralYaml from '../../../components/generalYaml/GeneralYaml.astro'
+import MarchSize from '../../../components/MarchSize/MarchSize.astro'
 
-<GeneralYaml />
+<MarchSize />
