trying with double quotes

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -5,6 +5,6 @@ sidebar:
   hidden: true
 tableOfContents: false
 ---
-import MarchSize from '../../../components/MarchSize/MarchSize.astro'
+import MarchSize from "../../../components/MarchSIze/MarchSize.astro"
 
 <MarchSize />
