adding in an article caused me to revisit the rest.  There is more to be done to bring these up to my current bar.

--- a/src/content/docs/generals/fifth_books.mdx
+++ b/src/content/docs/generals/fifth_books.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Fifth Books"
 author: "Luke Schierer"
+sidebar:
+  order: 100
 ---
 
 Using the Flexible Specialty books is going to get complicated really fast.  You will need to pay attention to the buff activation conditions.
