--- a/src/content/docs/generals/ground.mdx
+++ b/src/content/docs/generals/ground.mdx
@@ -2,7 +2,8 @@
 title: "Picking your first ground pair"
 author: 
   - "Luke Schierer"
-sortOrder: 5
+sidebar: 
+  order: 8
 ---
 :::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
