--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -1,6 +1,8 @@
 ---
-title: 'Picking Subcity Mayors'
+title: 'Picking Sub-City Mayors'
 author: 'Luke Schierer'
+sidebar:
+  order: 8
 ---
 import SPTable from '../../../components/SPTable.astro';
 
