--- a/src/content/docs/generals/misc.mdx
+++ b/src/content/docs/generals/misc.mdx
@@ -2,7 +2,8 @@
 title: "Miscellaneous Generals You Ought to Have"
 author: 
    - "Luke Schierer"
-sortOrder: 9
+sidebar: 
+  order: 9
 ---
 
 :::note
