--- a/src/content/docs/generals/peace_time_subcity_mayors.mdx
+++ b/src/content/docs/generals/peace_time_subcity_mayors.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Peace Time Subcity Mayors"
+title: "Peace Time Sub-City Mayors"
 author: "Luke Schierer"
+sidebar:
+  order: 100
 ---
 
 import {CardGrid} from "@astrojs/starlight/components";
