--- a/src/content/docs/generals/ranged.mdx
+++ b/src/content/docs/generals/ranged.mdx
@@ -2,7 +2,8 @@
 title: "Picking your first ranged pair"
 author: 
   - "Luke Schierer"
-sortOrder: 3
+sidebar: 
+  order: 7
 ---
 :::note
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
