--- a/src/content/docs/generals/siege.mdx
+++ b/src/content/docs/generals/siege.mdx
@@ -2,18 +2,19 @@
 title: "Picking your first siege pair"
 author: 
   - "Luke Schierer"
-sortOrder: 7
+sidebar: 
+  order: 9
 ---
 :::note
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
+In the [Overview], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 
 [Overview]: <../overview/>
 :::
-Your Siege generals will be the *last* PvP generals you invest [rune stones][]
-and [BoA][] on.  This is because siege troops require gems to heal. 
+Your Siege generals will be the *last* PvP generals you invest [rune stones]
+and [BoA] on.  This is because siege troops require gems to heal. 
 
 [rune stones]: <../../reference/glossary/#rune_stones>
 
@@ -22,9 +23,9 @@ and [BoA][] on.  This is because siege troops require gems to heal.
 ### For Free to Play Players:
 
 There are only two traditionally recommended generals that are also easily 
-[ascended][] by a F2P player for siege troops:
-* Matthias I (604)
-* Ulysses S. Grant [D] (602)
+[ascended] by a F2P player for siege troops:
+* Matthias I 
+* Ulysses S. Grant [D]
 
 That 'D' signifies that Grant requires a dragon to be of any use, and neither
 of these are great options to begin with.  That being said, Napoleon is fairly
@@ -32,13 +33,9 @@ easy to win, so even a free player might get enough copies of him to give him
 at least one or two red stars.  I am unsure how a Napoleon with one red star
 compares to a Matthias with three or more red stars.
 
-However, my analysis indicates that **Suleiman the Magnificent** is consistently 
-undervalued and underrated.  Ascended to three red stars, pairs with him as lead
-have similar attack buffs as the current leading premium generals once you realize
-that his [debuffs] will make the attack he does have more effective.  
+However, my analysis indicates that **[Suleiman the Magnificent]** is consistently undervalued and underrated.  Ascended to three red stars, pairs with him as primary have similar attack buffs as the current leading premium generals once you realize that his [debuffs] will make the attack he does have more effective.  
 
-He is thus my recommendation.  You should then pick one of the many premium generals
-that Suleiman pairs with as your assistant.  
+He is thus my recommendation.  You should then pick one of the many premium generals that [Suleiman] pairs with as your assistant.  
 
 [debuffs]: <../../reference/glossary/#debuff>
 
@@ -50,50 +47,29 @@ For light spenders, it is increasingly the case that the best choices for
 primary generals are premium generals.  Additionally, because the siege general
 *is* the last general you should be working on anyway, you have more time to
 slowly, over the course of (literally) years, assemble the fragments you
-need to [ascend][] this general.  My advice is to hang onto every copy of all
-of the following generals that you come across:
+need to [ascend] this general. 
 
-* Pallas
-* Raimondo
-* Kleos
-* Zucca 
-* John Churchill 
-* Edward Teach [D S] 
-* Petronas 
-
-However, only actually add skill books to whichever one you happen to get
-first, and only ever use this general in [BoC][] or [BoG][].  
-
-You have lots of options for pairings depending on which general ends up being
-your main general. This is because for Edward Teach and Suleiman dominate the
-assistant general space. Edward Teach is noticeably better, especially if you
-have enough dragons and spiritual beasts to give both your primary and
-assistant generals a beast, but even without that, he is still the superior
-choice.  That being said, Suleiman still scores A to A+ depending on who is is
-assistant for and remains a respectable choice.  
-
-Do note that Edward Teach is also listed as a possible primary general.
-Obviously he cannot be both primary and assistant, and he is one of the rare
-generals who conflicts with Suleiman.  Simply use any of the other three
-suggested primary generals as your assistant, with the preference being Zucca,
-Petronas, John Churchill (because of the way assistants work, Petronas brings
-more to the table than Churchill). 
-
-Eventually you will have your [ranged][], [ground][], [wall][], and not just
-one [mounted][] but both a PvP and Monster pair in this type all maxed out on
-[rune stones][], and all either [ascended][] or waiting on more fragments to
-finish ascending.  *Then and only then* will you evaluate which of the four
-above generals you have the most fragments of and from that which one to start
-developing.  In fact, you might even wait until you have *Suleiman's* (or
-Teach's) specialties maxed out to four gold as well before deciding (although
-remember not to ascend your assistant).
+Eventually you will have your [ranged], [ground], [wall], and not just
+one [mounted] but both a [PvP] and [Monster] mounted pair all maxed out on
+[rune stones], and all either [ascended] or waiting on more fragments to
+finish ascending.  *Then and only then* will you evaluate which siege generals you have the most fragments of and from that which one to start developing.  In fact, you might even wait until you have *Suleiman's* specialties maxed out to four gold as well before deciding (although remember not to ascend your assistant).
 
 Lastly, keep in mind that siege is often the best troop class to use for 
 reinforcing someone's keep.  However, due to the way that [buff] activation
 conditions work, many of these premium generals face significant disadvantages
-when used this way.  Raimondo, Teach, and Suleiman will retain their value, and 
-Septimius Severus, who when evaluated as an attack general falls just below top 
-tier, starts to look much more attractive. 
+when used this way.  [Raimondo], [Teach], and [Suleiman] will retain their value, and [Septimius Severus], who when evaluated as an attack general falls just below top tier, starts to look much more attractive. 
+
+If you are a light spender, I strongly recommend accepting the smaller attack [buff] in favor of being able to get points using this pair to reinforce others in your alliance.  
+
+[Septimius Severus]: <../details/septimius_severus/>
+
+[Raimondo]: <../details/raimondo/>
+
+[Teach]: <../details/edward_teach/>
+
+[Suleiman]: <../details/suleiman_the_magnificent/>
+
+[Suleiman the Magnificent]: <../details/suleiman_the_magnificent/>
 
 [mounted]: <../mounted/>
 
@@ -110,3 +86,7 @@ tier, starts to look much more attractive.
 [BoG]: <../../reference/glossary/#BoG>
 
 [buff]: <../../reference/glossary/#buff>
+
+[PvP]: <../../reference/glossary/#pvp>
+
+[Monster]: <../monster_hunters/>
