--- a/src/content/docs/generals/mounted.mdx
+++ b/src/content/docs/generals/mounted.mdx
@@ -2,7 +2,8 @@
 title: "Picking your first mounted pair"
 author: 
   - "Luke Schierer"
-sortOrder: 2
+sidebar: 
+  order: 4
 ---
 
 In the [Overview][], I explain my thinking.  This is a fairly long article, but
