raising the bar on recommendations

--- a/src/content/docs/generals/Monster_Hunters.mdx
+++ b/src/content/docs/generals/Monster_Hunters.mdx
@@ -38,8 +38,8 @@ As you look at this, there are a few key things to consider.
   kill.  
 * When you hunt monsters, you attack first.  If you wound the monster, it 
   attacks back.  
-  * The HP and Defense buffs determine how much this counter-attack
-    wounds you.  
+  * The HP and Defense buffs determine your survivability, or, conversely, how 
+    much this counter-attack wounds you.  
   * A severe enough counter-attack (ie you lose more than 10% of your total     
     march size) and you lose the overall attack.  
   * Your choice of pair needs to consider your tolerance for wounded. The
