--- a/src/content/docs/generals/ranged.mdx
+++ b/src/content/docs/generals/ranged.mdx
@@ -6,7 +6,7 @@ sidebar:
   order: 7
 ---
 :::note
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
+In the [Overview], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
@@ -15,7 +15,7 @@ skip it and dive right in here.
 :::
 ### For Free to Play Players:
 
-You will be using ranged as your main PVP force.
+You should be using archers as your main PVP force.
 
 Elektra will be your main general.  While there are much better options,
 you will have trouble fully ascending any of them because 
@@ -44,14 +44,14 @@ your main PVP march.
 
 Keep your eye out for any of the following (this is a ordered list)
 
+* Mihai
 * Charles XII 
 * Eleanor 
+* Alfred the Great
 * Douglas [D S] 
 * Charles XII 
-* James Conrad 
 * Princess Kaguya 
 * Douglas [ND S] 
-* Alfred the Great 
 
 These are all available for paying players. Particularly, Alfred is available
 in the Alliance Shop if you buy the Alliance Shop card.  Once you have invested
@@ -60,31 +60,32 @@ rune stones in any of these, *stick with that one*.  Note, these will be your
 Alfred if you spend to get the Alliance Shop card consistently) will
 potentially be very expensive.
 
-IF you pick Princess Kaguya, you *may* want to change the skill books on her:
-* Siege Machine Attack
+With any of these, you *probably* want to change the skill books on her:
+* Whichever of Ranged Troop HP *OR* Ranged Troop Defense is NOT on Elektra
 * Siege Machine Range Bonus
 * March Size Increase
 
-This build sacrifices speed and some durability in favor of mixing ranged and
-siege into a single attack march.  This should be carefully considered as it
-can cost many more gems for healing.
+And if you pick Princess Kaguya or Eleanor, you may additionally want to replace that Ranged Troop Defense/HP book with a Siege Attack book.  The March
+Speed book can be entirely offset by investing in monarch gear and so becomes
+a wasted skill book.  Using a Siege Range skill book instead makes your layers more effective.  Adding in the Siege Attack book lets you take advantage of the assistant general's strong siege [buff] by mixing a higher percentage of siege type troops in, at the cost of more gems when you heal.  Either can be well worth it in terms of damage done to the enemy. 
+
+[buff]: <../../reference/glossary/#buff>
 
 ### Medium Spenders:
 
 Evony is pushing hard to make us all pay for our generals.  Elektra's best pair 
 is currently ranked 56 and scores a B+.  That is honestly not *really* worth 
 investing in at all.  I am only recommending her for the light spenders because
-I am already telling the that they have to spend for their primary ground and 
+I am already telling them that they have to spend for their primary ground and 
 siege generals, and their wall assistant.  Having to spend to ascend a ranged
 general to start having a strong PvP march is not acceptable. 
 
 So for a medium spender, go ahead and start to ascend Elektra, but watch for
-fragments from the following generals.  It is not clear to me how frequently they
-be available and thus which you are best to go all out for.
+fragments from the following generals.  It is not clear to me how frequently they will be available and thus which you are best to go all out for.
 
-* Douglas [D S] (777)
-* Charles XII (736)
-* James Conrad (724)
+* Mihai
+* Douglas [D S] 
+* Charles XII 
 
 Note the difference in their scores here from their scores as assistants.  That 
 is because here they are being scored with having been fully ascended, and when
@@ -92,14 +93,14 @@ taking into account their personal attributes and not just their skills and
 specialities.  
 
 All of them accept the same assistants:
-* Eleanor (254)
-* Mason Weaver [D S] (216)
-* Vladimir the Great (200)
-* Edward III (191)
-* Winfield Scott (182)
-* Toyotomi Hideyori (172)
-* Mason Weaver [ND S] (168)
-* Gwanggaeto the Great (163)
+* Eleanor 
+* Mason Weaver [D S] 
+* Vladimir the Great 
+* Edward III 
+* Winfield Scott 
+* Toyotomi Hideyori 
+* Mason Weaver [ND S] 
+* Gwanggaeto the Great
 
 You really, however, want to pick one of the top four, and even then you might
 that choice temporary because Eleanor is simply that strong, and you might well
@@ -114,7 +115,7 @@ effectiveness.
 
 To achieve full effectiveness, Elektra, Winfield Scott, and Vladimir the Great 
 should be using the Ranged Attack Increase Skill Book.  For combinations with 
-two (2) of them, to achieve maximum effectiveness, the *lead general* should 
+two (2) of them, to achieve maximum effectiveness, the *primary general* should 
 be using the Ranged Attack Increase Skill Book.
 
 To achieve full effectiveness, Edward III should be using the Ranged Defense 
@@ -124,10 +125,4 @@ Because of these considerations, you may need to adjust your skill books from
 the recommendations given above. 
 
 I do not consider the investment in Elektra and whomever you pick as her partner
-to be wasted resources.  Firstly, an Elektra with three or four stars might well 
-be stronger than Douglas with only one.  Secondly because when you do eventually 
-reach keep 35 or 36 and stop ghosting, you are quite likely to like having two 
-strong marches for battlefield.   Third, building off of point number one, 
-despite the fact that all but one of these generals has been out for some months,
-Douglas, the newest of them, is the *only* one that I have a copy of, and *no* 
-fragments of.  You will need a strong general in the meantime.
+to be wasted resources.  Firstly, an Elektra with three or four stars might well be stronger than Douglas with only one.  Secondly because when you do eventually reach keep 35 or 36 and stop ghosting, you are quite likely to like having two strong marches for battlefield.   Third, building off of point number one, these generals can be quite rare.  You will need a strong general while waiting for fragments.  Fourth, if you can fully develop Elektra, you have the choice of a *really* strong general for your Senate, or exploring the Soul Binding feature.  
