--- a/src/content/docs/generals/wall.mdx
+++ b/src/content/docs/generals/wall.mdx
@@ -2,29 +2,30 @@
 title: "Picking your wall generals"
 author: 
   - "Luke Schierer"
-sortOrder: 4
+sidebar: 
+  order: 7
 ---
 
 :::note
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
+In the [Overview], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
 :::
 
-When you first start out, you ought to be [ghosting][] your troops whenever you
+When you first start out, you ought to be [ghosting] your troops whenever you
 might be attacked.  As a result, your Wall generals are not going to help you
-any because they will not have any troops to lead. Focus on your [ranged][] and
-[mounted][] generals first.
+any because they will not have any troops to lead. Focus on your [ranged] and
+[mounted] generals first.
 
 While you are busy developing these other generals, keep your eye out for
 Shajar al-Durr.  If you find her in the tavern (or win her in an event), she
 makes an excellent _**peace time**_ wall general.  She will help you get the
 resources you need to do other things.
 
-Eventually however you are ready to grow beyond [ghosting][] and to do that,
+Eventually however you are ready to grow beyond [ghosting] and to do that,
 you need to have a good set of wall generals.  Moreover, you need to have them
-fairly well-developed already, not brand new.
+fairly well-developed already, not brand new.  You thus must start developing your Wall pair *long* before you will start to use them, except *maybe* in Battlefield.
 
 George Dewey is available in the General's Chest in the Tavern.  He is
 unquestionably the best main wall defense general available for those who do
@@ -52,12 +53,14 @@ ought to question if you are ready to engage in PvP yet.
 :::tip
 #### Event Participants
 If you see any of the following, they are superior choices for assistants available only as part of paid events:
-* Leo III (322) - specializes in siege troops
-* Lautaro (260) - specializes in ground troops with a secondary effect on mounted troops.
-* Yodo-dono (232) - specializes in ranged troops with a secondary generic boost to HP.
+* Leo III - specializes in siege troops.  Use him if you plan on building a     
+  _**lot**_ of siege type troops.
+* Lautaro - specializes in ground troops with a secondary effect on mounted 
+  troops.  You can use him in place of either Queen Boudica or Robert the Bruce. 
+* Yodo-dono - specializes in ranged troops with a secondary generic boost to HP.
 :::
 
-[^230107-2]: See [Evony Answers][]' article on [ascending][].
+[^230107-2]: See [Evony Answers]' article on [ascending].
 
 [Evony Answers]: <https://www.evonyanswers.com>
 
