--- a/src/content/docs/generals/ground.mdx
+++ b/src/content/docs/generals/ground.mdx
@@ -6,7 +6,7 @@ sidebar:
   order: 8
 ---
 :::note
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
+In the [Overview], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here.
@@ -17,7 +17,7 @@ skip it and dive right in here.
 ### For Free to Play Players:
 
 This will be the fourth general you look at.  It is lower priority than your
-Mounted General, Ranged General, and Wall General.
+[Mounted] General, [Ranged] General, and [Wall] General.
 
 Trajan will be your main general.  He honestly isn't great, but there are no
 better options available to free players.
@@ -31,16 +31,19 @@ this, but it is hard.
 Look for any of (this is an ordered list, but your options are likely to be
 extremely limited, so take what you can get):
 
-* Aurelian (248)
-* Alessandra (217)[^MS]
-* Maeda Toshiie (214) (I recommend against him in case you become a light spender)
-* Guan Yu (206)
-* Turenne (205)[^GA]
-* Basil II (199)
-* Carus (186)
-* Scipio Africanus (184) (I recommend against him in case you become a light spender)
-* Soult (182)[^GA]
-* Alexander the Great (177) (I recommend against him in case you become a light spender)
+
+* Aurelian 
+* Alessandra[^MS]
+* Epaminondas[^GA]
+* Maeda Toshiie  (I recommend against him in case you become a light spender)
+* Turenne[^GA]
+* Lu Xun**
+* Guan Yu 
+* Basil II 
+* Carus 
+* Scipio Africanus  (I recommend against him in case you become a light spender)
+* Soult[^GA]
+* Alexander the Great (I recommend against him in case you become a light spender)
 
 Keeping in mind the one mandatory skill book above, spread the following 5
 skill books between your two generals:
@@ -52,16 +55,19 @@ skill books between your two generals:
 
 :::caution
 #### Specific General Notes
-* Note that if you use Turenne, or Soult, you _**cannot**_ use the Ground Troop Attack skill book on *either* general.
-* Note that if you use Alessandra, she _**must**_ have the March Size Increase Skill Book.
+* While Lu Xun has the highest attack buff, he has _**abysmal**_ defense and HP 
+  buffs.  As such, I recommend against him.  Survivability is absolutely crucial in ground troops.
+* Note that if you use Epaminondas, Turenne, or Soult, you _**cannot**_ use the 
+  Ground Troop Attack skill book on *either* general.
+* Note that if you use Alessandra, she _**must**_ have the March Size Increase 
+  Skill Book.
 :::
 
 
 ### For light spenders
 
 Stay away from the temptation to invest in Elise.  While until Aurelian, she
-was theoretically the best ground general out there, that is only true if you can give
-her a dragon.  You are likely to only have 2 dragons for a LONG time - one for
+was theoretically the best ground general out there, that is only true if you can give her a dragon.  You are likely to only have 2 dragons for a LONG time - one for
 ranged, and one for mounted. Elise stinks without a dragon.  While Ludwig is
 not quite as attractive as Elise, he suffers from the same fatal flaw, and so
 should be avoided for the same reason.
@@ -99,3 +105,9 @@ Follow the same skill book recommendation as the F2P above.
 [^GA]: Using Turenne or Soult means that neither general can have the Ground Attack Increase Skill Book.
 
 [^MS]: If you use Alessandra, she _**must**_ have the March Size Increase Skill Book.
+
+[Mounted]: <../mounted/>
+
+[Ranged]: <../ranged/>
+
+[Wall]: <../wall/>
