--- a/src/content/docs/generals/mounted.mdx
+++ b/src/content/docs/generals/mounted.mdx
@@ -6,7 +6,7 @@ sidebar:
   order: 4
 ---
 
-In the [Overview][], I explain my thinking.  This is a fairly long article, but
+In the [Overview], I explain my thinking.  This is a fairly long article, but
 contains a lot of useful background information if you want to understand how I
 arrived at these conclusions. If you just want to be told what to do, you can
 skip it and dive right in here. 
@@ -28,6 +28,7 @@ PvP and monsters.  Give him the following Skill Books:
   * Mounted Defense against Monsters
   * Mounted HP against Monsters
 * Key your eyes open during events you can win generals for
+  * Poligenus
   * Zhao Yun 
   * Sun Ce
   * Laudon
@@ -40,10 +41,9 @@ PvP and monsters.  Give him the following Skill Books:
   * Note that you may want one of these to be your PvP assistant instead of a
     PvM assistant. See below. 
 
-You could use Martinus instead of Roland, but Martinus is useless until you can
-give him a dragon.  Since you won't have two dragons until level 30, I dislike
-this approach.  Roland is useful far sooner, and saves your (red) Celtic dragon
-for your [ranged][] march.
+You could use Martinus for [Monster Hunter] instead of Roland, but Martinus is useless until you can give him a dragon.  Since you won't have two dragons until level 30, I dislike this approach.  Roland is useful far sooner, and saves your (red) Celtic dragon for your [ranged] march.  Also, pairs with Martinus tend to have low survivability, and thus high wounded if you take wounded at all.  F2P players will be disproportionately disadvantaged by that. 
+
+[Monster Hunter]: <../monster_hunters/>
 
 [ranged]: <../ranged/>
 
@@ -68,7 +68,7 @@ for your [ranged][] march.
 I recommend using periodic events like Advanced Journey until you get
 Aethelflaed.  Do as many of these events as you can, you will need many copies
 of her.  It will take you longer to fully ascend her, but it is worth it.  She
-will be your Monster general.  She must have the following skill books:
+will be your [Monster Hunter].  She must have the following skill books:
 * Mounted attack
 * Mounted defense against Monsters
 * Mounted hp against monsters
@@ -81,26 +81,30 @@ fast, but it is still a highly respectable pair.
 * luck
 * either Mounted defense or mounted HP (does not strongly matter which)
 
-As you spend more, consider replacing Theodora with George A. Custer.  You will
-now be ready for really big monsters.  As you make this transition, you will want to
-use the following skill book configuration on Custer:
+As you spend more, you may want to deep dive into picking a more specialized [monster hunting] pair.  Light spenders should pay attention to the [explanation] where I talk about survivability.  You almost certainly do not want high numbers of wounded when the internal battle mechanics (which happen invisibly) include two or more rounds.  If you do switch away from Theodora, you need the following five skill books across the two generals:
+* Mounted Attack
+* Mounted Attack Against Monsters
 * March size
+* Mounted HP Against Monsters
+* Mounted Defense Against Monsters
+
+Use one of 
 * Mounted Defense
 * Mounted HP
+as the sixth book to reduce wounded, or Luck to increase double drops if you can afford more wounded.  If your pair conflicts with one of the primary five, such as Aethelflaed and the Mounted Attack against Monsters book, replace that one with one of these two.  
 
-This will maximize your hitting power at the sacrifice of some double drops.
+_**Do not pick a pair that conflicts with more than one of the primary five skill books.**_
 
-If you do replace Theodora with Custer, use Theodora by configuring her with
+If you do replace Theodora, use her to join rallies other alliance members run by configuring her with
 * March Speed
 * March Speed against Monsters
 * Luck
 
-Send her with a single troop when you join rallies.  This maximizes your double
-drop chances even better than Baibars. 
+Send her with a single troop, ideally paired with Nathanael Greene.  This maximizes your double drop chances even better than Baibars, especially if you can get her fortune speciality to purple or even orange level. 
+
+[Monster Hunting]: <../monster_hunters/>
+
+[explanation]: <../monster_hunters/#explanation>
 
 ### Player versus Player (PvP) 
-For Mounted PvP, use Roland.  There are a number of really fancy mounted generals
-available, however, mounted troops are not the best choice for PvP.  You are better off
-using Roland here, and saving up for premium generals in other classes.  See the advice
-given to FTP players, however, be sure to reconfigure your Roland to use the Mounted
-Attack skill book as soon as you stop using Li Jing.
+For Mounted PvP, use Roland.  There are a number of really fancy mounted generals available, however, mounted troops are not the best choice for PvP.  You are better off using Roland here, and saving up for premium generals in other classes.  See the advice given to FTP players, however, be sure to reconfigure your Roland to use the Mounted Attack skill book as soon as you stop using Li Jing.
