started work simulating a layered version of Derrick Defies Vanilla Battle Simulator

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -5,7 +5,7 @@ sidebar:
   hidden: true
 tableOfContents: false
 ---
-import MarchSize from "../../../components/MarchSize/MarchSize.astro"
+import BattleSimulator from "../../../components/BattleSimulator/BattleSimulator.astro"
 
-<MarchSize />
+<BattleSimulator />
 
