a note about general convenants

--- a/src/content/docs/generals/Monster_Hunters.mdx
+++ b/src/content/docs/generals/Monster_Hunters.mdx
@@ -48,8 +48,12 @@ As you look at this, there are a few key things to consider.
     perfectly reasonable to accept a slightly slower rate at which you can take
     on the next biggest monster in exchange for doing so with much less wounded.
 * I currently have no way to display which generals are easier to get fragments for
-* I currently have no way to assess the effects of soul binding on monster hunting.
-* Since flexible specialities can be moved, I am not considering them at this time.  If you are able to max out your generals, I assume you will add the relevant flexible specialities Monday through Thursday. 
+* I currently have no way to assess the effects of soul binding on monster    
+  hunting.
+* I currently have no way to assess the effects of covenants on monster 
+  hunting.
+* Since flexible specialities can be moved, I am not considering them at this 
+  time.  If you are able to max out your generals, I assume you will add the relevant flexible specialities Monday through Thursday. 
 * I am *also* not yet calculating the effect of standard skill books on buffs.
   Since some generals conflict with some skill books, this *is* a flaw, and
   will hopefully eventually be addressed.  I may even remember to update this
