corrected links as I move pages

--- a/src/content/docs/generals/mounted.mdx
+++ b/src/content/docs/generals/mounted.mdx
@@ -43,7 +43,7 @@ PvP and monsters.  Give him the following Skill Books:
 
 You could use Martinus for [Monster Hunter] instead of Roland, but Martinus is useless until you can give him a dragon.  Since you won't have two dragons until level 30, I dislike this approach.  Roland is useful far sooner, and saves your (red) Celtic dragon for your [ranged] march.  Also, pairs with Martinus tend to have low survivability, and thus high wounded if you take wounded at all.  F2P players will be disproportionately disadvantaged by that. 
 
-[Monster Hunter]: <../monster_hunters/>
+[Monster Hunter]: <../pair_picking/monster_hunters/>
 
 [ranged]: <../ranged/>
 
@@ -102,9 +102,9 @@ If you do replace Theodora, use her to join rallies other alliance members run b
 
 Send her with a single troop, ideally paired with Nathanael Greene.  This maximizes your double drop chances even better than Baibars, especially if you can get her fortune speciality to purple or even orange level. 
 
-[Monster Hunting]: <../monster_hunters/>
+[Monster Hunting]: <../pair_picking/monster_hunters/>
 
-[explanation]: <../monster_hunters/#explanation>
+[explanation]: <../pair_picking/monster_hunters/#explanation>
 
 ### Player versus Player (PvP) 
 For Mounted PvP, use Roland.  There are a number of really fancy mounted generals available, however, mounted troops are not the best choice for PvP.  You are better off using Roland here, and saving up for premium generals in other classes.  See the advice given to FTP players, however, be sure to reconfigure your Roland to use the Mounted Attack skill book as soon as you stop using Li Jing.
