--- a/src/content/docs/generals/pair_picking/Monster_Hunters.mdx
+++ b/src/content/docs/generals/pair_picking/Monster_Hunters.mdx
@@ -3,7 +3,7 @@ title: Monster Hunting General Pairs
 author: 
   - "Luke Schierer"
 sidebar: 
-  order: 5
+  order: 2
 ---
 
 As you move beyond trying to play for free, you probably want to look at a premium monster hunting pair.  Partly because it is fun to be able to kill the bigger monsters.  Partly because the rewards they give will help you control your overall spending.  Partly because other members in your alliance need the rewards. How much each of these motivates you will vary both from player to player and from day to day.
@@ -59,10 +59,10 @@ As you look at this, there are a few key things to consider.
   will hopefully eventually be addressed.  I may even remember to update this
   note when I do so. _**This is important.**_  A general pair A with no skill books might show as weaker than another pair B, but if pair A has no conflicts and pair B does, the difference these skill books make will *sometimes* tip the balance in favor of pair A.  
 
-import MonsterPairs from "../../../components/general/pairing/MonsterPairs.astro"
+import MonsterPairs from "../../../../components/general/pairing/MonsterPairs.astro"
 
 [explanation]: <./#explanation>
 
-[Martinus]: <../details/martinus/>
+[Martinus]: <../../details/martinus/>
 
-[Evaluating Generals]: <../evaluating_generals/>
+[Evaluating Generals]: <../../evaluating_generals/>
