--- a/src/content/docs/generals/pair_picking/index.mdx
+++ b/src/content/docs/generals/pair_picking/index.mdx
@@ -5,10 +5,10 @@ tableOfContents: false
 sidebar:
   order: 3
 ---
-import CollapsibleSection from "../../../components/CollapsibleSection.astro"
-import Pairing from "../../../components/general/pairing/Pairing.astro"
+import CollapsibleSection from "../../../../components/CollapsibleSection.astro"
+import Pairing from "../../../../components/general/pairing/Pairing.astro"
 
-<CollapsibleSection>
+<CollapsibleSection title="Explanation">
     <p>
         As I have said, most sites offering ratings of generals have flaws.
         While I personally have really appreciated the work done on [EvonyAnswers],
@@ -34,16 +34,27 @@ import Pairing from "../../../components/general/pairing/Pairing.astro"
         over time.
     </p>
     <p>
-        Don't see the general you want to compare?  Go to the [General Yaml Creator]
-        and fill in the values.  You can submit it to me any time the box on the right
-        is green, but the more information you provide, the less I have to find before 
-        I can post it.
+        Don't see the general you want to compare?  Go to the [General Yaml Creator] and fill in the values.  You can submit it to me any time the box on the right is green, but the more information you provide, the less I have to find before I can post it.
     </p>
-</CollapsibleSection>
+</CollapsibleSection >
 <br/>
-
+<CollapsibleSection title="Usage Key">
+* Standard skill books
+  * If a general conflicts no matter where in the pair this book is used, you 
+    will see an orange dot next to the general's name.
+  * If the general conflicts only if he or she does not personally have that 
+    skill book, you will see a blue dot next to his or her name. 
+  * In either case, any skill book(s) you yourself add are not counted towards
+    buffs at this time.
+* General Covenants are not counted towards buffs at this time.
+* General Soul Binding is not counted towards buffs at this time. 
+* Buffs that require a Spiritual Beast or Dragon to activate are indicated by
+  a magenta (pink) dot next to the general's name.  This will override a blue
+* Gray dots means there are no special considerations. 
+  dot, but not an orange dot. 
+</CollapsibleSection>
 <Pairing />
 
 [EvonyAnswers]: https://www.evonyanswers.com/
 
-[General Yaml Creator]: <../../reference/generalyaml/>
+[General Yaml Creator]: <../../../reference/generalyaml/>
