progress so far tonight

--- a/src/content/docs/reference/test.mdx
+++ b/src/content/docs/reference/test.mdx
@@ -5,7 +5,7 @@ sidebar:
   hidden: true
 tableOfContents: false
 ---
-import BattleSimulator from "../../../components/BattleSimulator/BattleSimulator.astro"
+import Mayors from "../../../components/general/mayors/Mayors.astro"
 
-<BattleSimulator />
+<Mayors />
 
