a note for light spenders

--- a/src/content/docs/generals/pair-picking/Siege.mdx
+++ b/src/content/docs/generals/pair-picking/Siege.mdx
@@ -18,7 +18,14 @@ When looking at siege generals, you need to consider your use case.  There are t
   * Sending siege to reinforce a building an alliance member
     already owns
 
-Unfortunately, the generals that are good at the attacking use case are at best mediocre for the reinforcing use case, and, with few exceptions, the vice versa. 
+Unfortunately, the generals that are good at the attacking use case are at best 
+mediocre for the reinforcing use case.  However, unlike other troop types, with 
+siege we find that while the best reinforcing pairs will not be the absolute 
+best attack pairs, they will not be unnacceptably bad either.  **Light spenders
+should look at the reinforcing table** and accept that their siege attack pair 
+will never be optimized for attacking.  Since siege repair requires gems,
+the repair bill alone would probably preclude siege attacks for these players
+anyway. 
 
 
 ## Attacking Pairs
@@ -31,3 +38,5 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 import SiegeAttackPairs from "../../../../components/general/pairing/SiegeAttackPairs.astro"
 
 import SiegeReinPairs from "../../../../components/general/pairing/SiegeReinPairs.astro"
+
+[RSS]: <../../../reference/glossary/#rss>
