the game thinks she is a siege general, the numbers say otherwise

--- a/src/content/docs/generals/details/Idunn_(siege).mdx
+++ b/src/content/docs/generals/details/Idunn_(siege).mdx
@@ -2,6 +2,9 @@
 title: Idunn
 tableOfContents: false
 ---
+
+Evony insists that Idunn is a siege general.  I have thus included a copy of her evaluated as such.  She isn't, she does much better used as an Archer's general. 
+
 import General from "../../../../components/General.astro"
  
 <General generalEntry='Idunn'/>
