fixing a bunch of eslint stuff

--- a/src/content/docs/monsters/overview.mdx
+++ b/src/content/docs/monsters/overview.mdx
@@ -17,4 +17,4 @@ formula to follow to get the same results.
 
 import DirectoryList from '../../../components/DirectoryList.astro'
 
-<DirectoryList dir="monsters/reports/"/>
+<DirectoryList dir="monsters/reports/" recurse="true"/>
