--- a/src/content/docs/reference/index.mdx
+++ b/src/content/docs/reference/index.mdx
@@ -4,3 +4,6 @@ title: "Evony Reference Material"
 
 Articles in this section are intended as supporting reference material for the other, main, sections. 
 
+import DirectoryList from '../../../components/DirectoryList.astro'
+
+<DirectoryList  recurse="true"/>
