more work on extra skins

--- a/src/content/docs/generals/details/Martinus_(Dragon_God).mdx
+++ b/src/content/docs/generals/details/Martinus_(Dragon_God).mdx
@@ -1,7 +1,7 @@
 ---
-title: Martinus
+title: Martinus (Dragon God)
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Martinus'/>
+<General generalEntry='Martinus_(Dragon_God)'/>
