--- a/src/content/docs/generals/details/Elektra_(Dragon_God).mdx
+++ b/src/content/docs/generals/details/Elektra_(Dragon_God).mdx
@@ -1,7 +1,7 @@
 ---
-title: Raimondo (Odyssey)
+title: Elektra (Dragon God)
 tableOfContents: false
 ---
 import General from "../../../../components/General.astro"
  
-<General generalEntry='Raimondo_(Odyssey)'/>
+<General generalEntry='Elektra_(Dragon_God)'/>
