I've been testing with the ground page today.  my scores are definitally not right despite the fact that everything except ascending should be in place.

--- a/src/content/docs/generals/pair-picking/Ground.mdx
+++ b/src/content/docs/generals/pair-picking/Ground.mdx
@@ -24,7 +24,7 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 <GroundAttackPairs/>
 
 ## Reinforcing Pairs
-<GroundReinPairs/>
+GroundReinPairs
 
 
 import GroundAttackPairs from "../../../../components/general/pairing/GroundAttackPairs.astro"
