consolidate into a single file to see if I can get away with doing so.  I believe I had used multiple previously due to nanostores issues

--- a/src/content/docs/generals/pair-picking/Archers.mdx
+++ b/src/content/docs/generals/pair-picking/Archers.mdx
@@ -21,12 +21,12 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 
 
 ## Attacking Pairs
-<ArcherAttackPairs/>
+<AttackPairs generalClass='Archers'></AttackPairs>
 
 ## Reinforcing Pairs
-<ArcherReinPairs/>
+ArcherReinPairs/
 
 
-import ArcherAttackPairs from "../../../../components/general/pairing/ArcherAttackPairs.astro"
+import AttackPairs from "../../../../components/general/pairing/AttackPairs.astro"
 
 import ArcherReinPairs from "../../../../components/general/pairing/ArcherReinPairs.astro"
