--- a/src/content/docs/generals/pair-picking/Cavalry.mdx
+++ b/src/content/docs/generals/pair-picking/Cavalry.mdx
@@ -23,13 +23,13 @@ Similarly, while you can *usually* use generals that are good for the mounted at
 
 
 ## Attacking Pairs
-<MountedAttackPairs/>
+<AttackPairs generalClass='Mounted'></AttackPairs>
 
 ## Reinforcing Pairs
-<MountedReinPairs/>
+MountedReinPairs/
 
 
-import MountedAttackPairs from "../../../../components/general/pairing/MountedAttackPairs.astro"
+import AttackPairs from "../../../../components/general/pairing/AttackPairs.astro"
 
 import MountedReinPairs from "../../../../components/general/pairing/MountedReinPairs.astro"
 
