--- a/src/content/docs/generals/pair-picking/Ground.mdx
+++ b/src/content/docs/generals/pair-picking/Ground.mdx
@@ -21,12 +21,13 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 
 
 ## Attacking Pairs
-<GroundAttackPairs/>
+<AttackPairs generalClass='Ground'
+></AttackPairs>
 
 ## Reinforcing Pairs
 GroundReinPairs
 
 
-import GroundAttackPairs from "../../../../components/general/pairing/GroundAttackPairs.astro"
+import AttackPairs from "../../../../components/general/pairing/AttackPairs.astro"
 
 import GroundReinPairs from "../../../../components/general/pairing/GroundReinPairs.astro"
