--- a/src/content/docs/generals/pair-picking/Siege.mdx
+++ b/src/content/docs/generals/pair-picking/Siege.mdx
@@ -29,13 +29,13 @@ anyway.
 
 
 ## Attacking Pairs
-<SiegeAttackPairs/>
+<AttackPairs generalClass='Siege'></AttackPairs>
 
 ## Reinforcing Pairs
-<SiegeReinPairs/>
+SiegeReinPairs/
 
 
-import SiegeAttackPairs from "../../../../components/general/pairing/SiegeAttackPairs.astro"
+import AttackPairs from "../../../../components/general/pairing/AttackPairs.astro"
 
 import SiegeReinPairs from "../../../../components/general/pairing/SiegeReinPairs.astro"
 
