got the index page working again

--- a/src/content/docs/generals/pair-picking/index.mdx
+++ b/src/content/docs/generals/pair-picking/index.mdx
@@ -1,4 +1,5 @@
 ---
+slug: generals/pair-picking
 title: Evaluating Relative Strength of Pairs
 authors: Luke Schierer
 tableOfContents: false
@@ -6,6 +7,7 @@ sidebar:
   order: 3
 ---
 import CollapsibleSection from "../../../../components/CollapsibleSection.astro"
+import AttackPairs from "../../../../components/general/pairing/AttackPairs.astro"
 
 <CollapsibleSection title="Explanation">
     <p>
@@ -52,6 +54,9 @@ import CollapsibleSection from "../../../../components/CollapsibleSection.astro"
 * Gray dots means there are no special considerations. 
   dot, but not an orange dot. 
 </CollapsibleSection>
+
+<AttackPairs generalClass='all'></AttackPairs>
+
 
 [EvonyAnswers]: https://www.evonyanswers.com/
 
