monster hunters are just cav gens for now

--- a/src/content/docs/generals/pair-picking/Monster_Hunters.mdx
+++ b/src/content/docs/generals/pair-picking/Monster_Hunters.mdx
@@ -11,7 +11,7 @@ As you move beyond trying to play for free, you probably want to look at a premi
 While there are a few good free Monster hunters, notably [Martinus] (if he has a dragon) all of the truly great pairs include at least one premium general.
 This changes regularly enough that I am including my table for displaying pair attributes, pre-filtered to display mounted monster hunters, with an [explanation] for how to use its data.
 
-<MonsterPairs />
+<AttackPairs generalClass='Mounted'></AttackPairs>
 
 ## Explanation
 
@@ -59,7 +59,7 @@ As you look at this, there are a few key things to consider.
   will hopefully eventually be addressed.  I may even remember to update this
   note when I do so. _**This is important.**_  A general pair A with no skill books might show as weaker than another pair B, but if pair A has no conflicts and pair B does, the difference these skill books make will *sometimes* tip the balance in favor of pair A.  
 
-import MonsterPairs from "../../../../components/general/pairing/MonsterPairs.astro"
+import AttackPairs from "../../../../components/general/pairing/AttackPairs.astro"
 
 [explanation]: <./#explanation>
 
