I have two tables doing two different things on the same page.  The reinforcement table is still all wrong, with only partial columns, and wrong conditions, but it is theregit add src/components/general/BaseGeneral.ts

--- a/src/content/docs/generals/pair-picking/Archers.mdx
+++ b/src/content/docs/generals/pair-picking/Archers.mdx
@@ -25,6 +25,6 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 
 ## Reinforcing Pairs
 
-ArcherReinPairs/
+<AttackPairs generalClass="Archers" useCase="Reinforcement"></AttackPairs>
 
 import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
