a reasonable first guestimate at monster rankings

--- a/src/content/docs/generals/pair-picking/Cavalry.mdx
+++ b/src/content/docs/generals/pair-picking/Cavalry.mdx
@@ -27,7 +27,7 @@ Similarly, while you can _usually_ use generals that are good for the mounted at
 
 ## Reinforcing Pairs
 
-MountedReinPairs/
+<AttackPairs generalClass="Mounted" useCase="Reinforcement"></AttackPairs>
 
 import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
 
