--- a/src/content/docs/generals/pair-picking/Ground.mdx
+++ b/src/content/docs/generals/pair-picking/Ground.mdx
@@ -25,6 +25,7 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 
 ## Reinforcing Pairs
 
-GroundReinPairs
+<AttackPairs generalClass="Ground" useCase="Reinforcement"></AttackPairs>
+
 
 import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
