--- a/src/content/docs/generals/pair-picking/Monsters.mdx
+++ b/src/content/docs/generals/pair-picking/Monsters.mdx
@@ -8,10 +8,10 @@ sidebar:
 
 As you move beyond trying to play for free, you probably want to look at a premium monster hunting pair. Partly because it is fun to be able to kill the bigger monsters. Partly because the rewards they give will help you control your overall spending. Partly because other members in your alliance need the rewards. How much each of these motivates you will vary both from player to player and from day to day.
 
-While there are a few good free Monster hunters, notably [Martinus] (if he has a dragon) all of the truly great pairs include at least one premium general.
+While there are a few good free Monster hunters, notably [Martinus] (if he has a dragon) all the truly great pairs include at least one premium general.
 This changes regularly enough that I am including my table for displaying pair attributes, pre-filtered to display mounted monster hunters, with an [explanation] for how to use its data.
 
-<AttackPairs generalClass="Mounted"></AttackPairs>
+<AttackPairs generalClass="Mounted" useCase="Monsters"></AttackPairs>
 
 ## Explanation
 
