--- a/src/content/docs/generals/pair-picking/Siege.mdx
+++ b/src/content/docs/generals/pair-picking/Siege.mdx
@@ -33,7 +33,8 @@ anyway.
 
 ## Reinforcing Pairs
 
-SiegeReinPairs/
+<AttackPairs generalClass="Siege" useCase="Reinforcement"></AttackPairs>
+/
 
 import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
 
