various slight fixes for statically generating

--- a/src/content/docs/generals/pair-picking/Siege.mdx
+++ b/src/content/docs/generals/pair-picking/Siege.mdx
@@ -29,7 +29,7 @@ anyway.
 
 ## Attacking Pairs
 
-<AttackPairs generalClass="Siege"></AttackPairs>
+<AttackPairs generalClass="Siege" useCase="Attack"></AttackPairs>
 
 ## Reinforcing Pairs
 
